--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 
 <body class="container-lg text-center bg-img">
 
-    <header class="d-flex align-items-end justify-content-center h-100 pb-5" data-aos="fade-up" data-aos-duration="800">
+    <header class="d-flex flex-column align-items-center justify-content-end h-100 pb-2" data-aos="fade-up"
+        data-aos-duration="800">
         <h1 class="fz-md-9 fz-6 font-weight-bold text-black">
             <span class="fz-md-4 fz-3 font-weight-normal">Yvonne's</span>
             <br>PORTFOLIO
         </h1>
+        <img style="width: 8%;" src="https://media.giphy.com/media/Pnjij0BhU0KAtTgBXR/giphy.gif" alt="">
     </header>
 
     <main>
@@ -177,7 +179,7 @@
                         </li>
                     </ul>
                 </div>
-                <div data-aos="fade-up" data-aos-duration="600" data-aos-delay="400">
+                <div data-aos="fade-up" data-aos-duration="600" data-aos-delay="200">
                     <h3 class="subtitle mb-md-4 mb-3 font-weight-bold fz-md-3 fz-sm">中 期</h3>
                     <p class="mb-3 fz-md-3 fz-sm">中期負責展覽的整體視覺形象</p>
                     <div class="tz-gallery">
@@ -216,7 +218,7 @@
 
                     </div>
                 </div>
-                <div data-aos="fade-up" data-aos-duration="600" data-aos-delay="600">
+                <div data-aos="fade-up" data-aos-duration="600" data-aos-delay="200">
                     <h3 class="subtitle mb-md-4 mb-3 font-weight-bold fz-md-3 fz-sm">後 期</h3>
                     <p class="mb-3 fz-md-3 fz-sm">展覽佈置與成果</p>
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
