--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yvonne's PORTFOLIO</title>
+    <title>Yvonne's P0ORTFOLIO</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
@@ -18,7 +18,7 @@
         data-aos-duration="800">
         <h1 class="fz-md-9 fz-6 font-weight-bold text-black">
             <span class="fz-md-4 fz-3 font-weight-normal">Yvonne's</span>
-            <br>PORTFOLIO
+            <br>PROTFOLIO
         </h1>
         <img style="width: 8%;" src="https://media.giphy.com/media/Pnjij0BhU0KAtTgBXR/giphy.gif" alt="">
     </header>
