--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     </header>
 
     <main>
-        <section class="bg-black opacity-8 mb-9 text-white pt-md-9 pb-md-12 pt-6 pb-9" data-aos="fade-up"
-            data-aos-duration="600">
+        <section class="bg-black mb-9 text-white pt-md-9 pb-md-12 pt-6 pb-9" data-aos="fade-up" data-aos-duration="600">
             <div class="p-md-4 p-md-6 plr-2">
                 <div data-aos="fade-up" data-aos-duration="600">
                     <h2 class="title-border mb-md-4 mb-3 fz-md-4 fz-3 font-weight-bold">ABOUT</h2>
@@ -33,22 +32,33 @@
                 </div>
                 <div class="mb-md-6 mb-4" data-aos="fade-up" data-aos-duration="600" data-aos-delay="200">
                     <h3 class="subtitle mb-md-4 mb-3 font-weight-bold fz-md-3 fz-sm">學 歷</h3>
-                    <p class="mb-3 fz-md-3 fz-sm">2020<br>世新大學圖文傳播暨數位出版所 畢業</p>
-                    <p class="fz-md-3 fz-sm">2014<br>逢甲大學經濟系 畢業</p>
+                    <p class="mb-3 fz-md-3 fz-sm">2020 世新大學圖文傳播暨數位出版所 畢業</p>
+                    <p class="fz-md-3 fz-sm">2012 逢甲大學經濟系 畢業</p>
                 </div>
                 <div data-aos="fade-up" data-aos-duration="600" data-aos-delay="100">
                     <h3 class="subtitle mb-md-4 mb-3 font-weight-bold fz-md-3 fz-sm">經 歷</h3>
-                    <p class="fz-md-3 fz-sm">2018<br>世新大學圖文傳播暨數位出版學系<br>系所網站</p>
+                    <p class="fz-md-3 fz-sm">2018~2019 世新大學圖文傳播暨數位出版學系 教學助理</p>
+                    <p class="fz-md-3 fz-sm">2017~2019 服飾店商 美編兼職</p>
+                    <p class="fz-md-3 fz-sm">2016 婚紗工作室 美編</p>
+                    <p class="fz-md-3 fz-sm">2015 印刷廠 美工</p>
+                    <p class="fz-md-3 fz-sm">2012~2014 婚紗店 美工</p>
                 </div>
             </div>
         </section>
 
-        <section class="bg-black opacity-8 mb-9 text-white pt-md-9 pb-md-12 pt-6 pb-9" data-aos="fade-up"
-            data-aos-duration="600">
+        <section class="bg-black mb-9 text-white pt-md-9 pb-md-12 pt-6 pb-9" data-aos="fade-up" data-aos-duration="600">
             <div class="p-md-6 plr-2">
                 <h2 class="title-border mb-md-4 mb-3 fz-md-4 fz-3 font-weight-bold" data-aos="fade-up"
                     data-aos-duration="600">SKILLS</h2>
                 <ul class="row" data-aos="fade-up" data-aos-duration="600" data-aos-delay="100">
+                    <li class="a-hover col-12 col-md-6">
+                        <a class="text-white" target="_blank" href="http://yvonnechang.weebly.com/">
+                            <img class="skills-img mb-3" src="images/crop-original.png" alt="VISUAL DESIGN">
+                            <h4 class="text-primary font-weight-bold fz-md-3 fz-sm">VISUAL DESIGN</h4>
+                            <p class="font-weight-bold fz-md-3 fz-sm">Adobe photoshop / Illustrator / lightroom</p>
+                            <span class="fz-md-3 fz-sm">人像修圖 / 影像處理 / 圖文排版 / 印刷完稿</span>
+                        </a>
+                    </li>
                     <li class="a-hover col-12 col-md-6 mb-md-4 mb-3 mb-md-0">
                         <a class="text-white" href="index.html">
                             <img class="skills-img mb-3" src="images/laptop-mac.png" alt="WEBSITE DESIGN">
@@ -57,22 +67,174 @@
                             <span class="fz-md-3 fz-sm">網頁設計 / 切版 / RWD</span>
                         </a>
                     </li>
-                    <li class="a-hover col-12 col-md-6">
-                        <a class="text-white" target="_blank" href="http://yvonnechang.weebly.com/">
-                            <img class="skills-img mb-3" src="images/crop-original.png" alt="VISUAL DESIGN">
-                            <h4 class="text-primary font-weight-bold fz-md-3 fz-sm">VISUAL DESIGN</h4>
-                            <p class="font-weight-bold fz-md-3 fz-sm">Adobe photoshop / Illustrator /lightroom</p>
-                            <span class="fz-md-3 fz-sm">Banner製作&resize / 影像處理</span>
-                        </a>
-                    </li>
                 </ul>
+            </div>
+        </section>
+        <section class="bg-black mb-9 text-white pt-md-9 pb-md-12 pt-6 pb-9" data-aos="fade-up" data-aos-duration="600">
+            <div class="p-md-6 plr-2">
+                <h2 class="title-border mb-md-4 mb-3 fz-md-4 fz-3 font-weight-bold" data-aos="fade-up"
+                    data-aos-duration="600">VISUAL DESIGN WORKS</h2>
+
+                <div data-aos="fade-up" data-aos-duration="600" data-aos-delay="100">
+                    <h3 class="subtitle mb-md-4 mb-3 font-weight-bold fz-md-3 fz-sm">婚 紗</h3>
+                    <div class="tz-gallery">
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/1-1.jpg">
+                                    <img src="images/works/1-1.jpg" alt="wedding-1">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/1-2.jpg">
+                                    <img src="images/works/1-2.jpg" alt="wedding-2">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/1-3.jpg">
+                                    <img src="images/works/1-3.jpg" alt="wedding-3">
+                                </a>
+                            </div>
+
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/1-5.jpg">
+                                    <img src="images/works/1-5.jpg" alt="wedding-5">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/1-6.jpg">
+                                    <img src="images/works/1-6.jpg" alt="wedding-6">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/1-7.jpg">
+                                    <img src="images/works/1-7.jpg" alt="wedding-7">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div data-aos="fade-up" data-aos-duration="600" data-aos-delay="100">
+                    <h3 class="subtitle mb-md-4 mb-3 font-weight-bold fz-md-3 fz-sm">印 刷</h3>
+                    <div class="tz-gallery">
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/2-1.jpg">
+                                    <img src="images/works/2-1.jpg" alt="printing-1">
+                                </a>
+                                <a class="lightbox" href="images/works/2-2.jpg">
+                                    <img src="images/works/2-2.jpg" alt="printing-2">
+                                </a>
+                            </div>
+
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/2-3.jpg">
+                                    <img src="images/works/2-3.jpg" alt="printing-3">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/2-4.jpg">
+                                    <img src="images/works/2-4.jpg" alt="printing-4">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/2-5.jpg">
+                                    <img src="images/works/2-5.jpg" alt="printing-5">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/2-6.jpg">
+                                    <img src="images/works/2-6.jpg" alt="printing-6">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/2-8.jpg">
+                                    <img src="images/works/2-8.jpg" alt="printing-8">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div data-aos="fade-up" data-aos-duration="600" data-aos-delay="100">
+                    <h3 class="subtitle mb-md-4 mb-3 font-weight-bold fz-md-3 fz-sm">電 商</h3>
+                    <div class="tz-gallery">
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/3-1.jpg">
+                                    <img src="images/works/3-1.jpg" alt="e-commerce-1">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/3-2.jpg">
+                                    <img src="images/works/3-2.jpg" alt="e-commerce-2">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/3-3.jpg">
+                                    <img src="images/works/3-3.jpg" alt="e-commerce-3">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/3-4.jpg">
+                                    <img src="images/works/3-4.jpg" alt="e-commerce-4">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/3-5.jpg">
+                                    <img src="images/works/3-5.jpg" alt="e-commerce-5">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/3-6.jpg">
+                                    <img src="images/works/3-6.jpg" alt="e-commerce-6">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div data-aos="fade-up" data-aos-duration="600" data-aos-delay="100">
+                    <h3 class="subtitle mb-md-4 mb-3 font-weight-bold fz-md-3 fz-sm">個人興趣</h3>
+                    <div class="tz-gallery">
+                        <div class="row">
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/4-1.jpg">
+                                    <img src="images/works/4-1.jpg" alt="interest-1">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/4-2.jpg">
+                                    <img src="images/works/4-2.jpg" alt="interest-2">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/4-3.jpg">
+                                    <img src="images/works/4-3.jpg" alt="interest-3">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/4-4.jpg">
+                                    <img src="images/works/4-4.jpg" alt="interest-4">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/4-5.jpg">
+                                    <img src="images/works/4-5.jpg" alt="interest-5">
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <a class="lightbox" href="images/works/4-6.jpg">
+                                    <img src="images/works/4-6.jpg" alt="interest-6">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
         <section class="bg-black mb-9 text-white pt-md-9 pb-md-12 pt-6 pb-9" data-aos="fade-up" data-aos-duration="600">
             <div class="p-md-6 plr-2">
                 <h2 class="title-border mb-md-4 mb-3 fz-md-4 fz-3 font-weight-bold" data-aos="fade-up"
-                    data-aos-duration="600">WORKS</h2>
+                    data-aos-duration="600">WEBSITE DESIGN WORKS</h2>
                 <div data-aos="fade-up" data-aos-duration="600" data-aos-delay="100">
                     <h3 class="subtitle mb-md-4 mb-3 font-weight-bold fz-md-3 fz-sm">網 站</h3>
                     <ul class="row fz-md-3 fz-sm">
@@ -102,43 +264,6 @@
                             </a>
                         </li>
                     </ul>
-                </div>
-                <div data-aos="fade-up" data-aos-duration="600" data-aos-delay="200">
-                    <h3 class="subtitle mb-md-4 mb-3 font-weight-bold fz-md-3 fz-sm">BANNER</h3>
-                    <div class="tz-gallery">
-                        <div class="row">
-                            <div class="col-12 col-md-4">
-                                <a class="lightbox" href="images/banner-1.png">
-                                    <img src="images/banner-1.png" alt="banner-1">
-                                </a>
-                            </div>
-                            <div class="col-12 col-md-4">
-                                <a class="lightbox" href="images/banner-2.png">
-                                    <img src="images/banner-2.png" alt="banner-2">
-                                </a>
-                            </div>
-                            <div class="col-12 col-md-4">
-                                <a class="lightbox" href="images/banner-3.png">
-                                    <img src="images/banner-3.png" alt="banner-3">
-                                </a>
-                            </div>
-                            <div class="col-12 col-md-4">
-                                <a class="lightbox" href="images/banner-4.png">
-                                    <img src="images/banner-4.png" alt="banner-4">
-                                </a>
-                            </div>
-                            <div class="col-12 col-md-4">
-                                <a class="lightbox" href="images/banner-5.png">
-                                    <img src="images/banner-5.png" alt="banner-5">
-                                </a>
-                            </div>
-                            <div class="col-12 col-md-4">
-                                <a class="lightbox" href="images/banner-6.png">
-                                    <img src="images/banner-6.png" alt="banner-6">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
@@ -280,9 +405,6 @@
                     <a class="text-white font-weight-bold fz-md-3 fz-sm  "
                         href="mailto:s855727@gmail.com">s855727@gmail.com</a>
                 </div>
-                <a target="_blank" href="https://github.com/yvonne781231"><img class="icon a-hover"
-                        src="images/github.png" alt="github" data-aos="fade-up" data-aos-duration="600"
-                        data-aos-delay="200"></a>
             </div>
         </section>
 
