--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 </div>
                 <div data-aos="fade-up" data-aos-duration="600" data-aos-delay="100">
                     <h3 class="subtitle mb-md-4 mb-3 font-weight-bold fz-md-3 fz-sm">經 歷</h3>
-                    <p class="fz-md-3 fz-sm">2018~2019 世新大學圖文傳播暨數位出版學系 教學助理</p>
-                    <p class="fz-md-3 fz-sm">2017~2019 服飾店商 美編兼職</p>
-                    <p class="fz-md-3 fz-sm">2016 婚紗工作室 美編</p>
-                    <p class="fz-md-3 fz-sm">2015 印刷廠 美工</p>
+                    <p class="mb-3 fz-md-3 fz-sm">2018~2019 世新大學圖文傳播暨數位出版所 教學助理</p>
+                    <p class="mb-3 fz-md-3 fz-sm">2017~2019 服飾店商 美編兼職</p>
+                    <p class="mb-3 fz-md-3 fz-sm">2016 婚紗工作室 美編</p>
+                    <p class="mb-3 fz-md-3 fz-sm">2015 印刷廠 美工</p>
                     <p class="fz-md-3 fz-sm">2012~2014 婚紗店 美工</p>
                 </div>
             </div>
