--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
                                 </a>
                             </div>
                             <div class="col-12 col-md-4">
-                                <a class="lightbox" href="images/works/4-3.jpg">
-                                    <img src="images/works/4-3.jpg" alt="interest-3">
+                                <a class="lightbox" href="images/works/4-3.JPG">
+                                    <img src="images/works/4-3.JPG" alt="interest-3">
                                 </a>
                             </div>
                             <div class="col-12 col-md-4">
